kubernetes/k3s/apps/networking/traefik/public/chart/templates/bouncer.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/traefik.io/middleware_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: bouncer
  labels:
    traefik-instance: public
spec:
  plugin:
    bouncer:
      enabled: true
      crowdsecMode: stream
      crowdsecLapiHost: crowdsec:8080
      crowdsecLapiScheme: https
      crowdsecLapiTLSCertificateAuthorityFile: /etc/traefik/crowdsec-certs/ca.crt
      crowdsecLapiTLSCertificateBouncerFile: /etc/traefik/crowdsec-certs/tls.crt
      crowdsecLapiTLSCertificateBouncerKeyFile: /etc/traefik/crowdsec-certs/tls.key
      # crowdsecCapiScenarios:
      #   - crowdsecurity/http-path-traversal-probing
      #   - crowdsecurity/http-xss-probing
      #   - crowdsecurity/http-generic-bf
      forwardedHeadersTrustedIPs:
        - 173.245.48.0/20
        - 103.21.244.0/22
        - 103.22.200.0/22
        - 103.31.4.0/22
        - 141.101.64.0/18
        - 108.162.192.0/18
        - 190.93.240.0/20
        - 188.114.96.0/20
        - 197.234.240.0/22
        - 198.41.128.0/17
        - 162.158.0.0/15
        - 104.16.0.0/12
        - 172.64.0.0/13
        - 131.0.72.0/22
        - 2400:cb00::/32
        - 2606:4700::/32
        - 2803:f800::/32
        - 2405:b500::/32
        - 2405:8100::/32
        - 2a06:98c0::/29
        - 2c0f:f248::/32
        - 10.0.0.0/8
      clientTrustedIPs:
        - 10.0.0.0/24
      redisCacheEnabled: true
      redisCacheHost: "dragonfly.dragonfly.svc.cluster.local:6379"
      redisCachePassword: password
      redisCacheDatabase: "5"
      redisCacheUnreachableBlock: true
      traceHeadersCustomName: X-Request-ID
      metricsUpdateIntervalSeconds: 600
