kubernetes/k3s/apps/networking/traefik/public/chart/templates/dashboard.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-public-dashboard
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-public-traefik
  ports:
    - port: 8080
      name: traefik
      targetPort: 8080
      protocol: TCP
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
  labels:
    traefik-instance: internal
spec:
  hostnames:
    - traefik.plexmox.com
  rules:
    - backendRefs:
        - kind: Service
          name: traefik-public-dashboard
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: auth-internal
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: traefik
